--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   google_maps_flutter: ^2.4.0
   geocoding: ^2.1.0
   geolocator: ^9.0.2
+  flutter_typeahead: ^4.6.2
+  google_maps_flutter_web: ^0.5.3
+  flutter_google_places: ^0.3.0
+  webview_flutter: ^3.0.4
+
 
 dev_dependencies:
   flutter_test:
